Likely many pushes coming with bad descriptions. Styling for mobile. Chrome doesn't render correctly, needing to test styles on mobile, having to push tests to master.

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -194,8 +194,8 @@ media query / breakpoints
 }
 
 @media all and (max-width: 360px) {
-	.navLink {
+/*	.navLink {
 		font-size: .6em;
 	}
-}
+*/}
 
